--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -45,7 +45,8 @@
   
    h1 {
       font-family: 'ZCOOL XiaoWei', serif;
-      font-size: 48px;
+      font-size: 48px;     
+      text-align: center;
      }
 
     
