--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Events</h1>
+<div style="text-align: center; position: fixed; border: 0; margin: 0; padding: 0; left: 0; right: 0; top: 0; bottom: 0; background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%,rgba(0,0,0,1) 100%);">
+<h1 style="color: white;">Your SoloPartners Events</h1>
+</div>
 
-<table>
+<br>
+<br>
+<table style="color: white;">
   <thead>
     <tr>
       <th>Title</th>
