--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -7,6 +7,8 @@
 // For example, to change the sidebar width:
 // $sidebar-width: 242px;
 
+
+
 // Active Admin's got SASS!
  @import "active_admin/mixins";
  @import "active_admin/base";
@@ -20,3 +22,13 @@
 //
 //   .status_tag { background: #6090DB; }
 
+//body {
+//    background-color: white;
+//    opacity: 0,2;
+//    height: 100%;
+//    padding-bottom: 0;
+//}
+
+
+
+  
