--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,12 @@ title {
       font-family: 'ZCOOL XiaoWei', serif;
       font-size: 48px;
      }
+
+     h2{
+      font-family: 'ZCOOL XiaoWei', serif;
+      
+     }
+     
   
   /*    
      body  {
