--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html{
+    background-image: url("background_calendar.jpg");
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-size: 100%;
+    background-repeat: no-repeat;    
+ }
