--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,40 @@
-<h1>Home</h1>
+<head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<ul class="nav navbar-nav navbar-right">
+<style>
+html { 
+      background: url('https://images.unsplash.com/photo-1488646953014-85cb44e25828?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&dl=annie-spratt-217517-unsplash.jpg');
+      margin: 0;
+      padding: 0;
+      border: 0;
+      background-size: 100%;
+      background-repeat: no-repeat;>
+}
+</style>
+
+</head>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="collapse navbar-collapse" id="navbarNav">
+   
+   <a href="/" class="navbar-left"><img style="max-width:50px; margin-top: -7px;" src="/app/assets/images/logo111.png"></a>
+    SoloPartner</a>
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+      
+    </ul>
+
+    <ul class="nav navbar-nav navbar-right">
 <% if user_signed_in? %>
 <li> <a href="<%= destroy_user_session_path %>" data-method='delete'>
 Salir
@@ -10,3 +44,8 @@ Salir
 <li><a href="<%= new_user_registration_path %>"> Registro </a></li>
 <% end %>
 </ul>
+
+  </div>
+
+
+
