--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,17 +1,12 @@
 <div style= background-image: url("images/background_2.jpg");>
 <div style="text-align: center; position: fixed; border: 0; margin: 0; padding: 0; left: 0; right: 0; top: 0; bottom: 0; background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%,rgba(0,0,0,1) 100%);">
 <h1 style="color: white;">SoloPartner Itinerary</h1>
-<h2 style="color: white;">Calendario Viajes</h2>
+<h2 style="color: white;">Calendario de viajes</h2>
+
 </div>
 </div>
 
-<%
-=begin%>
- <div id="main">
-  <h1>test</h1>
-</div> 
-<%
-=end%>
+
 
 
 
