--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,13 @@
  *= require fullcalendar/dist/fullcalendar
  */
 
+
+ .alert{
+   margin: 0;
+   padding: 0;
+   position: absolute;
+}
+
 title {
     font-family: 'ZCOOL XiaoWei', serif;
     font-size: 48px;
@@ -27,10 +34,11 @@ title {
 
      h2{
       font-family: 'ZCOOL XiaoWei', serif;
-      
      }
      
-  
+
+     
+
   /*    
      body  {
       background-image: url("background_calendar.jpg");
