--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -2,6 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+.alert{
+    margin: 0;
+    padding: 0;
+    position: absolute;
+ }
+
 html{
     background-image: url("background_calendar.jpg");
     margin: 0;
@@ -10,3 +17,5 @@ html{
     background-size: 100%;
     background-repeat: no-repeat;    
  }
+
+ 
