--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,20 +19,19 @@ html {
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="collapse navbar-collapse" id="navbarNav">
    
-   <a href="/" class="navbar-left"><img style="max-width:50px; margin-top: -7px;" src="/app/assets/images/logo111.png"></a>
-    SoloPartner</a>
+   <a href="/" class="navbar-left"></a><span class="navbar-brand mb-0 h1">SoloPartner</span>
+                     
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/pages/home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="/pages/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="/send/contact">Contact</a>
       </li>
-      
-    </ul>
+      </ul>
 
     <ul class="nav navbar-nav navbar-right">
 <% if user_signed_in? %>
@@ -44,8 +43,6 @@ Salir
 <li><a href="<%= new_user_registration_path %>"> Registro </a></li>
 <% end %>
 </ul>
-
-  </div>
-
+</div>
 
 
